ajustando el get(0) por getFirst()